syntax = "proto3";

option go_package = "proto/user-experience";

service UserExperienceService {
    rpc AddXP(AddXPRequest) returns (UserExperience);
    rpc FindByUserId(FindByUserIdRequest) returns (UserExperience);
    rpc Create(UserExperience) returns (UserExperience);
    rpc Delete(UserExperience) returns (DeleteUserExperienceResponse);
    rpc Update(UserExperience) returns (UserExperience);
}

message UserExperience {
    int32 id = 1;
    int32 userId = 2;
    int32 xp = 3;
    int32 level = 4;
}

message AddXPRequest {
    int32 id = 1;
    int32 xp = 2;
}

message FindByUserIdRequest {
    int32 userId = 1;
}

message DeleteUserExperienceResponse {
}
